# he_mvp

./: .env.example  .gitignore  CHANGELOG.md  DOCUMENTATION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VERIFY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  security.yml
backend/: .coveragerc  .env.example  Dockerfile  algorithms.py  clinical_data.csv  compute.py  decrypt.py  encrypt.py  integrity.py  main.py  pytest.ini  requirements-dev.txt  requirements.txt  result.json  sample_clinical_data.csv  sdk.py
backend/app/: __init__.py  config.py  database.py  main.py  schemas.py
backend/migrations/: README.md
backend/scripts/: test_algorithms_e2e.py
backend/tests/: conftest.py  test_audit.py  test_audit_service.py  test_config.py  test_database.py  test_datasets.py  test_he_service.py  test_integrity.py  test_jobs.py  test_participants.py  test_schema_service.py  test_security.py  test_studies.py
docs/: ALGORITHMS.md  ARCHITECTURE.md  CRYPTOGRAPHY.md  DEPLOYMENT.md  OWASP_ANALYSIS.md
frontend/: next-env.d.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuditEntryCard.tsx  Badge.tsx  CryptoBadge.tsx  (+7 more)
infra/: docker-compose.prod.yml  docker-compose.yml
sample_data/: README.md
sdk/: README.md  cli.py  pyproject.toml  setup.py
sdk/securecollab/: __init__.py  audit.py  cli.py  client.py  crypto.py  exceptions.py  schema.py
sdk/tests/: conftest.py  test_crypto.py  test_schema.py
(+49 files in other folders)
